data/all_generated_tests/raw_wast_tests/br_TypeMismatchinControlFlowInstructions_1036.wast
;; Test 7: Define a block that expects a string output and use br within this block to provide a float operand, testing the operand type management.

(assert_invalid
  (module
    (func $type-arg-string-in-block
      (block (result i32)
        (f64.const 1.0)
        (br 0)
      )
    )
  )
  "type mismatch"
)